* long sounds are streamed (makes #8596/#7867 possible)
* time_offset (TODO?) (fixes #11865; will be needed at some point anyways for players entering max_hear_distance)
* sound is no longer upside-down (test eg. with hrtf)
* got rid of BS. (gain is still the same everywhere)
* sound handles are now userdata => method syntax; ids are owned and garbage collected
* sounds are paused while in pause menu in singleplayer
* shader animation timer is also paused
* warning in errorstream for positional stereo sounds, and don't play (fixes #6622)
* don't spam logs with every file tried in sound-pack (fixes #10979)
* correct documentation of sound params
* enable fade in for positional sounds (fixes #6748)
* vorbis seek callback now supports SEEK_END (is *not* optional according to <https://www.xiph.org/vorbis/doc/vorbisfile/callbacks.html>)


TODO:
* implement looped streamed sounds properly <- done?
* make time_offset work <- done? -> test
* fix small issues like footstep sounds playing at wrong place or missing vel
* add api or something for setting speed of sound in nodes per second, per player
* Add Doppler effect #9172
* testing stuff in devtest


not included in PR:
* No check for missing sounds #4955 <- could be easily changed, but bad change imo
* sound manager in separate thread for performance (but could be easily implemented)
* hrtf
* sound effects (e.g. #10873)
* starting and stopping sounds when players enter and leave max_hear_distance (#3559)
* Add Delay To SimpleSoundSpec #10306
* manipulate sound parameters for already playing sound handles #12510
* Get sound duration #12375
* Sound attached to objects do not disappear even when object is removed #11521
* Audio attached to object stops moving when object leaves #8094
* Incomplete Documentation of 'params' sound parameter table, used by minetest.sound_play() #11414
* CSM: playing sounds connected to entities is unimplemented #5389
* Add 'max hear distance' parameter for mob footstep sounds #4361
* more